[gd_scene load_steps=5 format=3 uid="uid://launcher"]

[ext_resource type="Script" uid="uid://bn2latu7utchw" path="res://launcher/Launcher.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c14h7d4h3as7n" path="res://Assets/Flat Nature Art.png" id="2_26cw3"]
[ext_resource type="Theme" uid="uid://d1a01xhtvmic2" path="res://shared/build/new_theme.tres" id="2_i33v0"]
[ext_resource type="Texture2D" uid="uid://67ucq7uhyeps" path="res://Assets/Adobe Express - file.png" id="3_3fvus"]

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -18.0
offset_right = 104.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_i33v0")
theme_override_constants/separation = 20

[node name="FlappyButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play Flappy Dino"

[node name="RunnerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play Dino Runner"

[node name="ExplorerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play Dino Explorer"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="FlatNatureArt" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(457.197, 353.5)
scale = Vector2(0.798746, 1.05972)
texture = ExtResource("2_26cw3")

[node name="AdobeExpress-File" type="Sprite2D" parent="."]
position = Vector2(398, 134)
scale = Vector2(0.398926, 0.398926)
texture = ExtResource("3_3fvus")

[connection signal="pressed" from="VBoxContainer/FlappyButton" to="." method="_on_flappy_pressed"]
[connection signal="pressed" from="VBoxContainer/RunnerButton" to="." method="_on_runner_pressed"]
[connection signal="pressed" from="VBoxContainer/ExplorerButton" to="." method="_on_explorer_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_pressed"]
